# SERVER_file_c-

./: .gitignore  việc cần làm trc t6.txt
client/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  bnr.sh  config.conf  run.sh  vcpkg.json
client/includes/: auth_manager.hpp  config_reader.h  file_watcher.h  file_watcher_helper.hpp  http_client.hpp  local_file_system.hpp  sync.h  sync_helper.hpp  utils.hpp
client/src/: auth_manager.cpp  config_reader.c  file_watcher.c  http_client.cpp  local_file_system.cpp  main.c  main.cpp  sync.c  sync_helper.cpp
server/: .gitignore  CMakeLists.docx  Doxyfile  config.properties  run.sh  vcpkg.json
server/include/: access_control.hpp  config.hpp  db.hpp  file_manager.hpp  protocol.hpp  server.hpp  sync_manager.hpp  user_manager.hpp
server/src/: access_control.cpp  config.cpp  db.cpp  file_manager.cpp  main.cpp  server.cpp  sync_manager.cpp  user_manager.cpp
server/test/: CMakeLists.docx  test_user_manager.cpp
test/best/: file_checker  test.sh
test/best/test/: hen.txt
test/best/test/addddddd/mob/: get
